--- a/C21/C21.vcxproj.filters
+++ b/C21/C21.vcxproj.filters
@@ -16,6 +16,12 @@
     <Filter Include="Unit Test Files">
       <UniqueIdentifier>{3e75cc7d-74a4-48c4-aa9c-25b952577ee0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Unit Test Files\Cat A">
+      <UniqueIdentifier>{d7397d98-de5c-451d-86d6-926b9eaa4c87}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Unit Test Files\Cat B">
+      <UniqueIdentifier>{076f322a-9aaa-492b-9b90-650789cc132a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h">
@@ -56,62 +62,62 @@
     <ClCompile Include="Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Test00.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0A.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0B.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0C.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0D.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0E.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test0F.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test01.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test02.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test03.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test04.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test05.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test06.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test07.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test08.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test09.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test10.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test11.cpp">
-      <Filter>Unit Test Files</Filter>
-    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Unit Test Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test00.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test01.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test02.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test03.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test04.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test05.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test06.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test07.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test08.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test09.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0B.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0D.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0E.cpp">
+      <Filter>Unit Test Files\Cat A</Filter>
+    </ClCompile>
+    <ClCompile Include="Test11.cpp">
+      <Filter>Unit Test Files\Cat B</Filter>
+    </ClCompile>
+    <ClCompile Include="Test10.cpp">
+      <Filter>Unit Test Files\Cat B</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0F.cpp">
+      <Filter>Unit Test Files\Cat B</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0C.cpp">
+      <Filter>Unit Test Files\Cat B</Filter>
+    </ClCompile>
+    <ClCompile Include="Test0A.cpp">
+      <Filter>Unit Test Files\Cat B</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
